// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterLabelContent /> should render with no data 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
        "type": "label",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
          "type": "label",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 12px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    className="emotion-0"
  />,
]
`;

exports[`<FilterLabelContent /> should select a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
        "type": "label",
        "values": Object {
          "labels": Array [],
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
          "type": "label",
          "values": Object {
            "labels": Array [],
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 12px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-24 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #b3b3b3;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  width: 0%;
  border-top: 4px solid #808080;
}

.emotion-1 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-left: 8px;
}

<ul
    className="emotion-24"
  >
    <li>
      <button
        aria-label="Tyngsboro"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Tyngsboro
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Brooklyn"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Brooklyn
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Cát Bà"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Cát Bà
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;

exports[`<FilterLabelContent /> should unselect a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
        "type": "label",
        "values": Object {
          "labels": Array [
            "Tyngsboro",
          ],
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "modelId": "e004af1b-d6d6-1341-9e6a-a6d1aa55c7d8",
          "type": "label",
          "values": Object {
            "labels": Array [
              "Tyngsboro",
            ],
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 12px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-24 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #b3b3b3;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 0%;
  border-top: 4px solid #808080;
}

.emotion-1 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-left: 8px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #0074f538;
  color: #b3b3b3;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-0 {
  width: 0%;
  border-top: 4px solid #73b61c;
}

<ul
    className="emotion-24"
  >
    <li>
      <button
        aria-label="Tyngsboro"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Tyngsboro
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Brooklyn"
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Brooklyn
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Cát Bà"
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              Cát Bà
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;
